# bookRead

./: .gitignore  README.md  app.js  index.html  package-lock.json  package.json  pubspec.yaml  styles.css  vite.config.mjs
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/wangkaishen/mybookread/: MainActivity.kt
lib/: main.dart
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
test/: widget_test.dart
