[package]
name = "bookread"
version = "1.0.0"
description = "Cross-platform reading planner built with Tauri 2"
authors = ["Stephen Wang"]
edition = "2021"

[lib]
name = "bookread_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
